src/App.css
:root {
  --main-color: rgb(48, 53, 63);
  --card-color: rgb(197, 193, 189);
}

body {
  background-color: var(--main-color);
  box-sizing: border-box;
}

#header, .endGame {
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  
}

#header>h3 {
  margin: 0;
}
div#scoreboard {
  color: white;
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-items: center;
}


#game {
  display: flex;
  flex-direction: column;
  


}

#card-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: auto;
  gap: 15px;
  padding: 15px;
  cursor: pointer;
  max-width: 1024px;

  width: 100%;
  
  margin-inline: auto;
}

.pokemon-card {
  display: flex;
  flex-direction: column;
  border-radius: 15px;
  background-color: var(--card-color);
}

.pokemon-card>h3 {
  align-self: center;
}

.endGame>button {
  all: unset;
  color: var(--main-color);
  background-color: rgb(197, 193, 189);
  margin: 15px;
  border-radius: 15px;
  width: 10rem;
  text-align: center;
}

@media (min-width: 768px) {
  #card-container {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (min-width: 1024px) {

  #card-container {
    grid-template-columns: repeat(4, 1fr);

  };

  .pokemon-card {
    transition: box-shadow 2s ease, transform 2s ease-in;
  }

  .pokemon-card:hover,
  .restart-button:hover {
    box-shadow: 0 5px 25px rgb(190, 191, 70);
    transform: scale(105%);
  }
  
  button, .pokemon-card {
    cursor: pointer;
  };
}

